--- a/index-3.html
+++ b/index-3.html
@@ -218,7 +218,7 @@ media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixe
   overflow-x: auto;
   scroll-snap-type: x mandatory;
   scroll-behavior: smooth;
-  max-height: 480px;
+  max-height: 600px;
   padding-top: 0.5rem;
   padding-bottom: 3rem; /* agar teks kebagian ruang */
   box-sizing: border-box;
@@ -251,9 +251,10 @@ media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixe
 }
 .produk-caption {
   text-align: center;
-  margin-top: 0.25rem;
-  font-size: 0.9rem;
-  color: #555;
+  margin-top: 1rem;
+  color: #333;
+  font-weight: bold;
+  font-size: 1rem;
 }
   
 /* Teks versi dark mode */  
