--- a/index.html
+++ b/index.html
@@ -1,48 +1,52 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="cache-control" content="public, max-age=31536000">
-  <meta http-equiv="expires" content="31536000">
- <title>JP Desainer Kreatif - Jasa Desain Logo & Visual Branding</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="theme-color" content="#25d366">
+  <meta name="referrer" content="strict-origin-when-cross-origin">
+  <meta name="format-detection" content="telephone=no">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
 
-  <!-- SEO dan Open Graph -->
-  <meta property="og:title" content="JP Desainer Kreatif – Desain Logo & Visual Branding" />
-  <meta property="og:description" content="Desain eksklusif, siap cetak besar, bukan stok massal. Cocok untuk brand kamu!" />
-  <meta property="og:image" content="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/Promosi.jpg" />
-  <meta property="og:url" content="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/" />
+  <!-- SEO -->
+  <title>JP Desainer Kreatif - Jasa Desain Logo & Visual Branding</title>
   <meta name="description" content="Jasa desain logo eksklusif, banner promosi, dan branding visual. Cocok untuk bisnis dan UMKM.">
   <meta name="keywords" content="desain logo, jasa desain, banner usaha, branding usaha, JP Desainer Kreatif">
   <meta name="author" content="Joko Prasetyo">
   <meta name="robots" content="index, follow">
-  <meta name="google-site-verification" content="kode-verifikasi-dari-google" />
-  <meta property="og:type" content="website" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="referrer" content="strict-origin-when-cross-origin" />
-  <meta name="format-detection" content="telephone=no" />
-  <meta name="theme-color" content="#25d366">
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <link rel="apple-touch-icon" href="icon-192.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-  <link rel="apple-touch-startup-image" href="logo.png" />
-  <link rel="apple-touch-startup-image"
-      href="splash-screen.png"
-      media="(device-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" />
-  <link rel="apple-touch-startup-image"
-      href="splash-screen-landscape.png"
-      media="(device-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)" />
-  <link rel="apple-touch-startup-image" href="splash-1242x2688.png"
-media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
-  <meta name="mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <link rel="preload" href="fonts/Ubuntu-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-  <link rel="preload" href="fonts/Angelface.otf" as="font" type="font/otf" crossorigin="anonymous">
-  <!-- <link rel="stylesheet" href="css/style.css" /> -->
-  <link rel="preload" as="image" href="logo.png">
-  <link rel="preload" as="image" href="Promosi.jpg">
+  <meta name="google-site-verification" content="kode-verifikasi-dari-google">
+
+  <!-- Open Graph / Sosial Media -->
+  <meta property="og:title" content="JP Desainer Kreatif – Desain Logo & Visual Branding">
+  <meta property="og:description" content="Desain eksklusif, siap cetak besar, bukan stok massal. Cocok untuk brand kamu!">
+  <meta property="og:image" content="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/Promosi.jpg">
+  <meta property="og:url" content="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/">
+  <meta property="og:type" content="website">
+
+  <!-- Favicon & App Icons -->
+  <link rel="icon" href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/apple-touch-icon.png">
+  <link rel="apple-touch-icon" href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/icon-192.png">
+
+  <!-- Startup Images (Opsional) -->
+  <link rel="apple-touch-startup-image" href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/splash-screen.png" media="(orientation: portrait)">
+  <link rel="apple-touch-startup-image" href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/splash-screen-landscape.png" media="(orientation: landscape)">
+  <link rel="apple-touch-startup-image" href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/splash-1242x2688.png" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
+
+  <!-- Preload Aset -->
+  <link rel="preload" href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/fonts/Ubuntu-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/fonts/Angelface.otf" as="font" type="font/otf" crossorigin="anonymous">
+  <link rel="preload" as="image" href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/logo.png">
+  <link rel="preload" as="image" href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/Promosi.jpg">
+
+<link rel="manifest" href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/manifest.json">
+
+  <!-- <link rel="stylesheet" href="css/style.css"> -->
   <style>
     @font-face {
       font-family: 'Ubuntu';
