--- a/index.html
+++ b/index.html
@@ -559,11 +559,11 @@ Semoga Allah membalas kebaikan Abang. Aamiin🤲</em> – Aris SHd</p>
     <h2>Hubungi Kami</h2>
     <div class="kontak-box">
       <a href="https://wa.me/6285212887849" class="kontak-link" target="_blank">
-        <img src="https://img.icons8.com/ios-filled/50/25d366/whatsapp.png" alt="WA" />
+        <img src="https://img.icons8.com/ios-filled/50/25d366/whatsapp.png" alt="WA">
         6285212887849
       </a>
       <a href="https://m.me/mr.jokoprastiyo" class="kontak-link" target="_blank">
-        <img src="https://img.icons8.com/ios-filled/50/0078FF/facebook-messenger.png" alt="Messenger" />
+        <img src="https://img.icons8.com/ios-filled/50/0078FF/facebook-messenger.png" alt="Messenger">
         Joko Prasetyo
       </a>
     </div>
